# llm_wiki-server

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README-OVERLAY.md  README.md  文档指引.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  COMPARISON_LLM_KNOWLEDGE_BASE.md  DEVELOPMENT_AND_TESTING.md  README.md  UPSTREAM_SYNC.md  feasibility-assessment.md  overlay-upstream-integration.md  upstream-architecture-zh.md  上游同步.md  上游架构说明.md  代码结构总览.md  低配机交叉编译CLI.md  可行性评估.md  向量搜索与Chat去Node化.md  备份与恢复.md  对照-llm-knowledge-base.md  开发与测试.md  文档索引.md  新项目指引.md  日常运维.md  架构与改造方案.md  远端服务器ingest.md  邮件配置-SMTP-Resend.md  部署-ECS与Tunnel.md  部署-低配ECS一键脚本.md  部署指引.md
docs/notes/: 2026-06-20-public-deploy-auth-progress.md  2026-06-21-public-deploy-auth-progress.md  2026-06-22-public-deploy-auth-done.md  AGENT_TRANSCRIPTS.md  agent-session-2026-06-04.md  memory-index.md
docs/superpowers/plans/: 2026-06-06-http-chat-mvp.md  2026-06-20-public-deploy-auth.md
docs/superpowers/specs/: 2026-06-06-lite-chat-ui-design.md  2026-06-20-public-deploy-auth-design.md
docs/低成本网站经验/: AUTH_ANALYSIS.md  AUTH_DECISION.md  AUTH_IMPLEMENTATION_PROMPT.md  AUTH_SYSTEM_DESIGN_FOR_LLM.md  FRONTEND_ANALYSIS.md  FRONTEND_LAYERING_STRATEGY_FOR_CODEX.md  FRONTEND_SYSTEM_PROMPT_SHORT.md  INDEX.md  PROJECTS_SUMMARY_CN.md  README.md  SMHANOV_AUTH_CODE_ANALYSIS.md  SMHANOV_AUTH_DEMO_README.md  SMHANOV_AUTH_README.md  SOURCES.md
overlay/auth/: Cargo.toml
overlay/auth/src/: error.rs  lib.rs  password.rs  ratelimit.rs  schema.rs  service.rs  session.rs  store.rs
overlay/auth/tests/: integration.rs
overlay/cli/: README.md
overlay/cli/node/: package-lock.json  package.json  tsconfig.json
overlay/cli/node/src/: cmd-ingest.ts  cmd-llm-stream.ts  cmd-reindex.ts  load-config.ts  setup-stores.ts
overlay/cli/node/src/shims/: file-sync.ts  fs.ts  project-store-noop.ts  tauri-core.ts  tauri-fetch.ts  tauri-http.ts
overlay/cli/rust/: Cargo.toml
overlay/cli/rust/src/: cmd_ingest.rs  cmd_preprocess.rs  cmd_reindex.rs  cmd_rescan.rs  cmd_search.rs  cmd_vector.rs  config.rs  main.rs  vector.rs
overlay/config/: README.md  llm.example.json  server.example.json
overlay/crates/llm-wiki-common/: Cargo.toml
overlay/crates/llm-wiki-common/src/: hybrid.rs  lib.rs  project.rs  rescan.rs  vector.rs
overlay/crates/llm-wiki-common/src/search/: keyword.rs  mod.rs
overlay/embedding/: EXPLORATION.md  README.md  test_embedding.example.py
overlay/eval/: AUDIT_2026-06-23.md  EVALUATION_PLAN.md  README.md  generate_test_cases.py  ingest_check.py  rag_eval.py
overlay/eval/scripts/: run_eval.sh
overlay/eval/test_cases/: parenting_books.json  template.json
overlay/eval/tests/: test_p0.py
overlay/patches/: 0002-http-ui-bootstrap.patch  README.md
overlay/server/: Cargo.toml  README.md
overlay/server/src/: config.rs  llm.rs  mail.rs  main.rs  metrics.rs  server.rs  state.rs  static_files.rs
overlay/server/src/api/: auth_routes.rs  chat.rs  conversations.rs  files.rs  graph.rs  mod.rs  projects.rs  runtime.rs  search.rs
overlay/static/: index.html  landing.css  landing.js
overlay/static/auth/: auth.css  auth.js  login.html  reset.html
overlay/static/lite/: README.md  app.css  app.js  config.example.js  index.html  markdown.js  projects.meta.json
overlay/web/: README.md  backend-client.ts  env.ts  path-helpers.ts
overlay/web/commands/: file-sync.ts  fs.ts
overlay/web/lib/: llm-client.ts  persist.ts  project-store.ts  search.ts
scripts/: apply-patches.sh  backup-auth-db.sh  build-all.sh  build-cli.sh  build-web.sh  deploy-ecs.sh  e2e-auth.sh  e2e-docker.sh  e2e-full.sh  e2e-local.sh  ingest-batch.sh  llm-wiki  sync-artifacts.sh  sync-upstream.sh
