[package]
name = "llm-wiki-server"
version = "0.1.0"
edition = "2021"
description = "Headless HTTP server for LLM Wiki (overlay)"
license = "GPL-3.0-or-later"

[[bin]]
name = "llm-wiki-server"
path = "src/main.rs"

[dependencies]
# Phase 1: add path dependency on upstream src-tauri as llm_wiki_lib
# llm_wiki_lib = { path = "../../upstream/src-tauri" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
