[package]
name = "llm-wiki-server"
version = "0.1.0"
edition = "2021"
description = "Headless HTTP server for LLM Wiki (overlay)"
license = "GPL-3.0-or-later"

[[bin]]
name = "llm-wiki-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tiny_http = "0.12"
walkdir = "2"
llm-wiki-common = { path = "../crates/llm-wiki-common" }
llm-wiki-auth = { path = "../auth" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "unwind"
strip = true
