[package]
name = "llm-wiki-cli"
version = "0.1.0"
edition = "2021"
description = "LLM Wiki command-line tools (overlay)"
license = "GPL-3.0-or-later"

[[bin]]
name = "llm-wiki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
llm-wiki-common = { path = "../../crates/llm-wiki-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
md-5 = "0.10"
lancedb = "0.27.2"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "unwind"
strip = true
