[package]
name = "llm-wiki-common"
version = "0.1.0"
edition = "2021"
description = "Shared search and project utilities for LLM Wiki overlay"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
md-5 = "0.10"
lancedb = "0.27.2"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
